💄 Fix WindowControls being stretched on Ubuntu

--- a/src/dot/components/WindowControls/style.scss
+++ b/src/dot/components/WindowControls/style.scss
@@ -12,6 +12,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    align-items: center;
 }
 
 #browser:not(.tabs-in-titlebar) .titlebar-buttonbox-container {
@@ -21,7 +22,7 @@
 #browser.tabs-in-titlebar.native-window-controls {
     .titlebar-buttonbox-container .titlebar-button {
         width: 100%;
-        height: 100%;
+        height: 0px;
         display: flex;
         -moz-window-dragging: no-drag;
     }
